# libGrafos

./: .gitignore  CMakeLists.txt  EuclidianGraph.cpp  EuclidianGraph.h  GetTimeMs64.h  Graph.cpp  Graph.h  README.md  Screen.cpp  Screen.h  main.cpp  main.h  sleep.cpp  sleep.h
libs/freetype-2.7/: CMakeLists.txt
libs/freetype-2.7/builds/vms/: ftsystem.c
libs/freetype-2.7/devel/: ftoption.h
libs/gl3w-master/: CMakeLists.txt
libs/glfw-3.2.1/: CMakeLists.txt
shaders/: fontF.glsl  fontV.glsl  mainF.glsl  mainV.glsl  vectorV.glsl
